--- a/pom.xml
+++ b/pom.xml
@@ -6,57 +6,85 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
   <groupId>org.mule.transports</groupId>
   <artifactId>mule-transport-sftp</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.3-SNAPSHOT</version>
-  <properties>
-    <muleVersion>1.3.3</muleVersion>
-  </properties>
+  <version>1.3.3</version>
   <name>SFTP Transport</name>
   <description>Allows Mule to communicate over SFTP
   protocols</description>
   <dependencies>
-
     <dependency>
       <groupId>org.mule.transports</groupId>
       <artifactId>mule-transport-vm</artifactId>
-      <version>${muleVersion}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>org.mule.transports</groupId>
       <artifactId>mule-transport-tcp</artifactId>
-      <version>${muleVersion}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>org.mule.transports</groupId>
       <artifactId>mule-transport-file</artifactId>
-      <version>${muleVersion}</version>
+      <version>${version}</version>
     </dependency>
 	<dependency>
       <groupId>org.mule.transports</groupId>
       <artifactId>mule-transport-stream</artifactId>
-      <version>${muleVersion}</version>
+      <version>${version}</version>
     </dependency>
-	      <dependency>
+    <dependency>
       <groupId>org.mule.modules</groupId>
       <artifactId>mule-module-client</artifactId>
-      <version>${muleVersion}</version>
+      <version>${version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.mule.tests</groupId>
       <artifactId>mule-tests-core</artifactId>
-      <version>${muleVersion}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>org.mule.tests</groupId>
       <artifactId>mule-tests-functional</artifactId>
-      <version>${muleVersion}</version>
+      <version>${version}</version>
     </dependency>
-
-
     <dependency>
       <groupId>jsch</groupId>
       <artifactId>jsch</artifactId>
       <version>0.1.29</version>
     </dependency>
   </dependencies>
+
+     <build>
+        <defaultGoal>install</defaultGoal>
+        <finalName>${artifactId}</finalName>
+        <plugins>
+            <!-- "mvn install" will copy the target jar to the $MULE_HOME/lib/user directory,
+                overwriting the previous one. -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-artifact</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${MULE_HOME}/lib/user</outputDirectory>
+                            <overWriteReleases>true</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${groupId}</groupId>
+                                    <artifactId>${artifactId}</artifactId>
+                                    <version>${version}</version>
+                                    <destFileName>${artifactId}.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
