--- a/pom.xml
+++ b/pom.xml
@@ -1,55 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.mule.transports</groupId>
-  <artifactId>mule-transport-sftp</artifactId>
-  <packaging>jar</packaging>
-  <version>1.3.3</version>
-  <name>SFTP Transport</name>
-  <description>Allows Mule to communicate over SFTP 
-  protocols</description>
-  <dependencies>
-    <dependency>
-      <groupId>org.mule.transports</groupId>
-      <artifactId>mule-transport-vm</artifactId>
-      <version>${version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mule.transports</groupId>
-      <artifactId>mule-transport-tcp</artifactId>
-      <version>${version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mule.transports</groupId>
-      <artifactId>mule-transport-file</artifactId>
-      <version>${version}</version>
-    </dependency>
-	<dependency>
-      <groupId>org.mule.transports</groupId>
-      <artifactId>mule-transport-stream</artifactId>
-      <version>${version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mule.modules</groupId>
-      <artifactId>mule-module-client</artifactId>
-      <version>${version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mule.tests</groupId>
-      <artifactId>mule-tests-core</artifactId>
-      <version>${version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mule.tests</groupId>
-      <artifactId>mule-tests-functional</artifactId>
-      <version>${version}</version>
-    </dependency>
-    <dependency>
-      <groupId>jsch</groupId>
-      <artifactId>jsch</artifactId>
-      <version>0.1.29</version>
-    </dependency>
-  </dependencies>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.mule.transports</groupId>
+	<artifactId>mule-transport-sftp</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<properties>
+		<muleVersion>1.3.3</muleVersion>
+	</properties>
+	<distributionManagement>
+		<repository>
+			<id>muleforge.webdav.releases</id>
+			<url>dav:https://dav.muleforge.org/repository/${artifactId}/</url>
+		</repository>
+		<snapshotRepository>
+			<id>muleforge.webdav.snapshots</id>
+			<url>dav:https://dav.muleforge.org/snapshots.repository/${artifactId}/</url>
+		</snapshotRepository>
+		<site>
+			<id>muleforge.webdav.sites</id>
+			<url>dav:https://dav.muleforge.org/${artifactId}/</url>
+		</site>
+	</distributionManagement>
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-webdav</artifactId>
+				<version>1.0-beta-2</version>
+			</extension>
+		</extensions>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<finalName>${artifactId}-${version}</finalName>
+					<descriptors>
+						<descriptor>assembly.xml</descriptor>
+					</descriptors>
+					<appendAssemblyId>false</appendAssemblyId>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<name>SFTP Transport</name>
+	<description>Send and Receive Mule Messages over SFTP</description>
+	<dependencies>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-vm</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-tcp</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-file</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-stream</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-module-client</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.tests</groupId>
+			<artifactId>mule-tests-core</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.tests</groupId>
+			<artifactId>mule-tests-functional</artifactId>
+			<version>${muleVersion}</version>
+		</dependency>
+                <dependency>
+                        <groupId>jsch</groupId>
+                        <artifactId>jsch</artifactId>
+                        <version>0.1.29</version>
+                </dependency>
+	</dependencies>
+	
 </project>
