[SFTP-5] Fixed pom.xml, added Mule SNAPSHOT repository into it.

--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mule.transports</groupId>
 	<artifactId>mule-transport-sftp</artifactId>
 	<packaging>jar</packaging>
 	<version>1.4.4-SNAPSHOT</version>
+	
 	<properties>
 		<muleVersion>1.4.4-SNAPSHOT</muleVersion>
 	</properties>
+	
+	<repositories>
+		<repository>
+			<id>muleforce.codehaus.releases</id>
+			<url>http://snapshots.repository.codehaus.org/</url>
+		</repository>
+	</repositories>
+	
 	<distributionManagement>
 		<repository>
 			<id>muleforge.webdav.releases</id>
 			<url>dav:https://dav.muleforge.org/repository/${artifactId}/</url>
-		</repository>
+		</repository>		
 		<snapshotRepository>
 			<id>muleforge.webdav.snapshots</id>
 			<url>dav:https://dav.muleforge.org/snapshots.repository/${artifactId}/</url>
@@ -24,30 +34,13 @@
 			<url>dav:https://dav.muleforge.org/${artifactId}/</url>
 		</site>
 	</distributionManagement>
-	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-webdav</artifactId>
-				<version>1.0-beta-2</version>
-			</extension>
-		</extensions>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<finalName>${artifactId}-${version}</finalName>
-					<descriptors>
-						<descriptor>assembly.xml</descriptor>
-					</descriptors>
-					<appendAssemblyId>false</appendAssemblyId>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	
+	
 	<name>SFTP Transport</name>
 	<description>Send and Receive Mule Messages over SFTP</description>
+	
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.mule.transports</groupId>
 			<artifactId>mule-transport-vm</artifactId>
@@ -89,5 +82,27 @@
             <version>0.1.29</version>
         </dependency>
 	</dependencies>
+	
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-webdav</artifactId>
+				<version>1.0-beta-2</version>
+			</extension>
+		</extensions>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<finalName>${artifactId}-${version}</finalName>
+					<descriptors>
+						<descriptor>assembly.xml</descriptor>
+					</descriptors>
+					<appendAssemblyId>false</appendAssemblyId>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	
 </project>
