--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
 	<groupId>org.mule.transports</groupId>
 	<artifactId>mule-transport-sftp</artifactId>
 	<packaging>jar</packaging>
-	<version>1.4.4-SNAPSHOT</version>
+	<version>1.4.3</version>
 	
 	<properties>
-		<muleVersion>1.4.4-SNAPSHOT</muleVersion>
+		<muleVersion>1.4.3</muleVersion>
 	</properties>
 	
 	<repositories>
