--- a/src/main/resources/META-INF/services/org/mule/providers/sftp.properties
+++ b/src/main/resources/META-INF/services/org/mule/providers/sftp.properties
@@ -1,5 +1,27 @@
-connector=org.mule.providers.sftp.SftpConnector
-dispatcher.factory=org.mule.providers.sftp.SftpMessageDispatcherFactory
-message.receiver=org.mule.providers.sftp.SftpMessageReceiver
-message.adapter=org.mule.providers.streaming.StreamMessageAdapter
-endpoint.builder=org.mule.impl.endpoint.UrlEndpointBuilder
+#This file is the service descriptor for your transport
+#It ties all the implementation classes together so that Mule can
+#construct endpoints for your transport protocol at runtime
+#For a full list of properties that can be set here see -
+#http://mule.mulesource.org/wiki/x/pwI
+
+
+#The connector class for your transport. This is alwas required
+connector=org.mule.transport.sftp.SftpConnector
+
+#Used as the Mule internal representation of a message received or sent by 
+#your transport. This is always required.
+message.adapter=org.mule.transport.DefaultMessageAdapter
+
+#The factory used to create dispatchers responsible for sending events from the underlying technology
+dispatcher.factory=org.mule.transport.sftp.SftpMessageDispatcherFactory
+
+#Defines the way in which endpoints for your transport will be constructed
+#Options are (but you can write your own) -
+#org.mule.endpoint.ResourceEndpointBuilder i.e. vm://my.queue
+#org.mule.endpoint.UrlEndpointBuilder i.e. axis:http://localhost:1234/context/Service?params
+#org.mule.endpoint.SocketEndpointBuilder i.e. udp://localhost:2222
+
+message.receiver=org.mule.transport.sftp.SftpMessageReceiver
+endpoint.builder=org.mule.endpoint.UrlEndpointURIBuilder
+
+#For more information see - http://mule.mulesource.org/wiki/x/DQ
