--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -8,4 +8,4 @@ log4j.appender.console.layout.ConversionPattern=%-5p %d [%t] %c: %m%n
 log4j.logger.org.apache=WARN
 log4j.logger.com.mycompany=DEBUG
 
-log4j.logger.org.mule.providers.sftp=DEBUG
+log4j.logger.org.mule.transport.sftp=DEBUG
