--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 	<artifactId>mule-transport-sftp</artifactId>
 	<packaging>jar</packaging>
    <name>Mule SFTP Transport</name>
-   <version>2.0.1</version>
+   <version>2.2.1-SNAPSHOT</version>
    <description>SFTP connectivity</description>
 
 	<properties>
-       <mule.version>2.0.1</mule.version>
+       <mule.version>2.2.1</mule.version>
 	</properties>
 
    <!-- Mule Forge Configuration -->
@@ -81,7 +81,7 @@
 			</extension>
 		</extensions>
 		<plugins>
-			<plugin>
+     <plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<finalName>${artifactId}-${version}</finalName>
@@ -142,10 +142,9 @@
             <version>${mule.version}</version>
         </dependency>
         <dependency>
-            <groupId>jsch</groupId>
-            <artifactId>jsch</artifactId>
-            <version>0.1.29</version>
+            <groupId>com.jcraft</groupId>
+             <artifactId>jsch</artifactId>
+             <version>0.1.41</version>
         </dependency>
 	</dependencies>
-
 </project>
