--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,24 @@
    </repositories>
 
 	<build>
+		<!--
+			 Ensure that variables, like ${SFTP_HOST} is replace with a real host.
+		     The variables is a workaround for not having an embedded SFTP server
+		     Every developer/tester should be able to configure users, hosts & password etc
+		 -->
+		<filters>
+			<filter>src/test/resources/sftp-settings.properties</filter>
+		</filters>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</testResource>
+		</testResources>
+
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
@@ -107,6 +125,24 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.3</version>
+			</plugin>
+
+			<!-- Display the error in the console...-->
+			<!--
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<useFile>false</useFile>
+				</configuration>
+			</plugin>
+			-->
+
 		</plugins>
 	</build>
 	<dependencies>
@@ -135,6 +171,12 @@
 			<groupId>org.mule.tests</groupId>
 			<artifactId>mule-tests-functional</artifactId>
 			<version>${mule.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>mockobjects</groupId>
+			<artifactId>mockobjects-core</artifactId>
+			<version>0.09</version>
+			<scope>test</scope>
 		</dependency>
         <dependency>
             <groupId>org.mule</groupId>
