A lot of new features, see JIRA issues for descriptions of each new feature and corresponding testcase

--- a/src/main/resources/META-INF/services/org/mule/transport/sftp.properties
+++ b/src/main/resources/META-INF/services/org/mule/transport/sftp.properties
@@ -24,4 +24,7 @@ dispatcher.factory=org.mule.transport.sftp.SftpMessageDispatcherFactory
 message.receiver=org.mule.transport.sftp.SftpMessageReceiver
 endpoint.builder=org.mule.endpoint.UrlEndpointURIBuilder
 
+requester.factory=org.mule.transport.sftp.SftpMessageRequesterFactory
+
+
 #For more information see - http://mule.mulesource.org/wiki/x/DQ
