--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -9,3 +9,4 @@ log4j.logger.org.apache=WARN
 log4j.logger.com.mycompany=DEBUG
 
 log4j.logger.org.mule.transport.sftp=DEBUG
+log4j.logger.org.mule.transport.sftp.notification.SftpTransportNotificationTestListener=DEBUG
