--- a/src/test/resources/sftp-settings.properties
+++ b/src/test/resources/sftp-settings.properties
@@ -8,4 +8,5 @@ USER1_PASSWORD=muletest1
 USER1_IDENTITYFILE=../../2K/workspace/esb/mule/src/test/resources/certs/id_rsa-muletest1
 USER1_IDENTITYFILE_PASSPHRASE=muletest1
 SFTP_HOST=dsoasrv6
+ARCHIVE=/Users/magnuslarsson/archive
 
