--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,20 @@
 			</plugin>
 			-->
 
+			<plugin>
+				<!-- ensure that source jar files are created and installed as well -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 	<dependencies>
@@ -159,6 +173,12 @@
 			<artifactId>mule-transport-file</artifactId>
 			<version>${mule.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.mule.transports</groupId>
+            <artifactId>mule-transport-quartz</artifactId>
+            <version>${mule.version}</version>
+			<scope>test</scope>
+        </dependency>  
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-module-client</artifactId>
