--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mule.transports</groupId>
 	<artifactId>mule-transport-sftp</artifactId>
 	<packaging>jar</packaging>
-   <name>Mule SFTP Transport</name>
-   <version>2.2.1-SNAPSHOT</version>
-   <description>SFTP connectivity</description>
+	<name>Mule SFTP Transport</name>
+	<version>2.2.1-SNAPSHOT</version>
+	<description>SFTP connectivity</description>
 
 	<properties>
-       <mule.version>2.2.1</mule.version>
+		<mule.version>2.2.1</mule.version>
 	</properties>
 
-   <!-- Mule Forge Configuration -->
-   <issueManagement>
-       <system>Jira</system>
-       <url>http://mule.mulesource.org/jira/browse/SFTP</url>
-   </issueManagement>
+	<!-- Mule Forge Configuration -->
+	<issueManagement>
+		<system>Jira</system>
+		<url>http://mule.mulesource.org/jira/browse/SFTP</url>
+	</issueManagement>
 	<scm>
-       <connection>scm:svn:http://svn.muleforge.org/mule-transport-sftp/branches/mule-2.0.x</connection>
-       <developerConnection>scm:svn:https://svn.muleforge.org/mule-transport-sftp/</developerConnection>
+		<connection>scm:svn:http://svn.muleforge.org/mule-transport-sftp/branches/mule-2.2.x</connection>
+		<developerConnection>scm:svn:https://svn.muleforge.org/mule-transport-sftp/</developerConnection>
 
-		<url>http://svn.mule-transport-sftp.muleforge.org/branches/mule-2.0.x</url>
+		<url>http://svn.mule-transport-sftp.muleforge.org/branches/mule-2.2.x</url>
 	</scm>
-   <ciManagement>
-       <system>Bamboo</system>
-       <url>http://bamboo.muleforge.org/browse/SFTP-FORGE</url>
-       <notifiers/>
-   </ciManagement>
-
-
-
+	<ciManagement>
+		<system>Bamboo</system>
+		<url>http://bamboo.muleforge.org/browse/SFTP-FORGE</url>
+		<notifiers/>
+	</ciManagement>
 
 
 	<distributionManagement>
@@ -51,26 +48,26 @@
 		</site>
 	</distributionManagement>
 
-   <repositories>
-       <repository>
-           <id>ch-dep</id>
-           <name>Codehaus Dependencies</name>
-           <url>http://dist.codehaus.org/mule/dependencies/maven2</url>
-           <layout>default</layout>
-       </repository>
-       <repository>
-           <!-- local repository for this transport. Users can upload dependencies here when the artifact
-                is not available on any other repository. Its the users' responsibility to make sure that no
-                licenses are violated by uploading dependencies to this location
-           -->
-           <id>sftp-deps</id>
-           <name>Sftp Dependencies</name>
-           <url>http://dist.muleforge.org/${artifactId}/dependencies/maven2</url>
-           <snapshots>
-               <enabled>false</enabled>
-           </snapshots>
-       </repository>
-   </repositories>
+	<repositories>
+		<repository>
+			<id>ch-dep</id>
+			<name>Codehaus Dependencies</name>
+			<url>http://dist.codehaus.org/mule/dependencies/maven2</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<!-- local repository for this transport. Users can upload dependencies here when the artifact
+							is not available on any other repository. Its the users' responsibility to make sure that no
+							licenses are violated by uploading dependencies to this location
+					   -->
+			<id>sftp-deps</id>
+			<name>Sftp Dependencies</name>
+			<url>http://dist.muleforge.org/${artifactId}/dependencies/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 	<build>
 		<!--
@@ -96,7 +93,7 @@
 			</extension>
 		</extensions>
 		<plugins>
-     <plugin>
+			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<finalName>${artifactId}-${version}</finalName>
@@ -106,14 +103,14 @@
 					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 			</plugin>
-                        <plugin>
-                          <groupId>org.apache.maven.plugins</groupId>
-                          <artifactId>maven-release-plugin</artifactId>
-                          <configuration>
-                            <arguments>-Dmaven.test.skip.exec=true</arguments>
-                            <useReleaseProfile>false</useReleaseProfile>
-                          </configuration>
-                        </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<arguments>-Dmaven.test.skip.exec=true</arguments>
+					<useReleaseProfile>false</useReleaseProfile>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -171,14 +168,14 @@
 		<dependency>
 			<groupId>org.mule.transports</groupId>
 			<artifactId>mule-transport-file</artifactId>
-            <version>${mule.version}</version>
+			<version>${mule.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>org.mule.transports</groupId>
-            <artifactId>mule-transport-quartz</artifactId>
-            <version>${mule.version}</version>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-quartz</artifactId>
+			<version>${mule.version}</version>
 			<scope>test</scope>
-        </dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-module-client</artifactId>
@@ -195,15 +192,54 @@
 			<version>0.09</version>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.mule</groupId>
-            <artifactId>mule-core</artifactId>
-            <version>${mule.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jcraft</groupId>
-             <artifactId>jsch</artifactId>
-             <version>0.1.42</version>
-        </dependency>
+		<dependency>
+			<groupId>org.mule</groupId>
+			<artifactId>mule-core</artifactId>
+			<version>${mule.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.42</version>
+		</dependency>
 	</dependencies>
+
+	<profiles>
+		<!--
+			A profile that can be used to run all tests with pooling enabled
+		-->
+		<profile>
+			<id>pooling</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.4.3</version>
+						<configuration>
+							<systemProperties>
+								<property>
+									<name>mule.test.timeoutSecs</name>
+									<value>300</value>
+								</property>
+								<property>
+									<!-- Always pooling for ALL tests! (simple way to ensure that all tests works with pooling) -->
+									<name>mule.sftp.transport.maxConnectionPoolSize</name>
+									<value>3</value>
+								</property>
+							</systemProperties>
+							<excludes>
+								<!-- These test cases test the pooling functionality, and since the tests uses another settings than the
+								     above (overridden) settings we can't run them. For example the test that one connector has no pooling
+								     and thus the command useConnectionPool() returns false - with the overridden value it will return true,
+								     thus an error should have occurred. -->
+								<exclude>**/SftpPoolingFunctionalTestCase.java</exclude>
+								<exclude>**/SftpNamespaceHandlerTestCase.java</exclude>
+							</excludes>
+							<useFile>false</useFile>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
