--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>mule-transport-sftp</artifactId>
 	<packaging>jar</packaging>
 	<name>Mule SFTP Transport</name>
-	<version>2.2.1-RC2</version>
+	<version>2.2.1-RC3-SNAPSHOT</version>
 	<description>SFTP connectivity</description>
 
 	<properties>
