--- a/src/main/resources/META-INF/services/org/mule/transport/sftp.properties
+++ b/src/main/resources/META-INF/services/org/mule/transport/sftp.properties
@@ -5,12 +5,8 @@
 #http://mule.mulesource.org/wiki/x/pwI
 
 
-#The connector class for your transport. This is alwas required
+#The connector class for your transport. This is always required
 connector=org.mule.transport.sftp.SftpConnector
-
-#Used as the Mule internal representation of a message received or sent by 
-#your transport. This is always required.
-message.adapter=org.mule.transport.DefaultMessageAdapter
 
 #The factory used to create dispatchers responsible for sending events from the underlying technology
 dispatcher.factory=org.mule.transport.sftp.SftpMessageDispatcherFactory
@@ -26,5 +22,10 @@ endpoint.builder=org.mule.endpoint.UrlEndpointURIBuilder
 
 requester.factory=org.mule.transport.sftp.SftpMessageRequesterFactory
 
+message.factory=org.mule.transport.DefaultMuleMessageFactory
+
+inbound.exchange.patterns=one-way,request-response
+outbound.exchange.patterns=one-way,request-response
+default.exchange.pattern=one-way
 
 #For more information see - http://mule.mulesource.org/wiki/x/DQ
