use the latest version

--- a/src/test/resources/sftp-settings.properties
+++ b/src/test/resources/sftp-settings.properties
@@ -3,11 +3,11 @@
 #
 # If the below values are changed, please do not commit them...
 #
-USER1_NAME=dzapata
-USER1_PASSWORD=N11tasha
-USER1_IDENTITYFILE=/home/dzapata/.ssh/id_rsa
+USER1_NAME=muletest1
+USER1_PASSWORD=muletest1
+USER1_IDENTITYFILE=/PATH/TO/THE/FILE/id_rsa-muletest1
 USER1_IDENTITYFILE_PASSPHRASE=muletest1
 SFTP_HOST=localhost
-ARCHIVE=/home/dzapata/test-archive
+ARCHIVE=/PATH/TO/THE/test-archive
 
 
