Updating the Sftp connector to work with Mule 3.X flows.

--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 	<artifactId>mule-transport-sftp</artifactId>
 	<packaging>jar</packaging>
 	<name>Mule SFTP Transport</name>
-	<version>3.0.0-RC3-SNAPSHOT</version>
+	<version>3.1.0--SNAPSHOT</version>
 	<description>SFTP connectivity</description>
 
 	<properties>
-		<mule.version>3.0.0-RC3-SNAPSHOT</mule.version>
+		<mule.version>3.1.0-SNAPSHOT</mule.version>
 	</properties>
 
 	<!-- Mule Forge Configuration -->
